--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
       <li><a href="/profile">See your profile </a></li>
       <li><a href="/profiles">See everyone's profile</a></li>
       <li><a href="/schedule">See your schedule </a></li>
+      <% } else { %>
+        <p>You must be logged in to see anything!</p>
       <% } %>
     </ul>
   </div>
