--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -9,7 +9,7 @@
           <strong><%= item.name %></strong>
           at <%= item.time %> on <%= item.days %> <br>
           Zoom link: <a href="<%= item.link %>"><%= item.link %></a><br>
-          <a href="/schedule/remove/<%=item._id %>">Remove Meeting</a>
+          <a href="/schedule/remove/<%=item._id %>">(remove meeting)</a>
           <hr>
       <% }) %>
 
